Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -11,40 +11,36 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h1 class="display-1">Title</h1>
-          <h1 class="">Heading</h1>
-          <p class="lead">Lead paragraph </p>
-          <p class="">Paragraph</p>
+          <h3>So wird es ein TRAUM-Hunde-Urlaub! Ganz ohne jeden Stress!</h3>
+          <p><strong>NEU: Die 7 Checklisten für einen stressfreien Hunde-Urlaub + Dog-Fit HUNDEWÖRTERBUCH in 4 Sprachen</strong> -<strong> JETZT kostenlos!</strong></p>
+          <p class="">Das brandneue <strong>7 Checklisten-Paket</strong> umfasst <strong>40 Seiten</strong> und begleitet Dich und Deinen Hund <strong>von der ersten Urlaubsidee bis in Euren persönlichen Traum-Hunde-Urlaub.</strong> Ganz nach dem Motto: So macht
+            Hunde-Urlaub Spaß!</p>
           <ul class="">
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
+            <li><strong>Dog-Fit vor der Abreise:</strong> Umfangreiche To-Do-Liste. Was ist zu tun 4, 3, 2, 1 Wochen vor dem Urlaub, was ab Abreisetag? Schritt-für-Schritt-Checkliste mit vielen Tipps und Tricks.</li>
+            <li><strong>Das Hunde-Gepäck:</strong> Die mehr als komplette Packliste garantiert eine angenehme Fahrt und eine stressfreie Eingewöhnung am Urlaubsort. Anti-Heimwehgarantie inklusive!</li>
+            <li><strong>Die Hundereiseapotheke:</strong> Damit auch bei kleinen und größeren Wehwehchen kein Stress aufkommt, sollten diese Dinge gleich zu Hause mit ins Gepäck.</li>
+            <li><strong>Dog-Fit für Auto, Bahn, Schiff &amp; Flugzeug:</strong> So machst Du Deinen Hund fit für Straße, Schiene, Luft und Wasser, inkl. vieler Tipps, gesetzlicher Bestimmungen und absoluten Don‘ts.</li>
+            <li><strong>Vor Ort - Stress lass nach!</strong> Schritt-für-Schritt-Umstellungsprogramm für eine stressfreie Eingewöhnung am Urlaubsort. Außerdem: Bachblüten und TTouch gegen Stressanzeichen.</li>
+            <li><strong>Dog-Fit für Wandern, Radfahren &amp; Meer:</strong> Welcher Aktiv-Typ ist Dein Hund? Wie machst Du Deinen Hund Dog-Fit für Eure gemeinsamen Urlaubsaktivitäten? Was ist alles zu beachten?</li>
+            <li><strong>Eine gute Hundeschule besuchen:</strong> Von Nasenarbeit bis Erziehungskurs, Umfangreiche Checkliste zur Auswahl einer guten Hundeschule. Warum kritisch sein angesagt ist!</li>
           </ul>
-          <ul class="list-inline">
-            <li class="list-inline-item">Lorem ipsum</li>
-            <li class="list-inline-item">Phasellus iaculis</li>
-            <li class="list-inline-item">Nulla volutpat</li>
-          </ul>
+          <p>+ Dog-Fit HUNDEWÖRTERBUCH in vier Sprachen!</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
           <hr class="">
-          <div class="blockquote">
-            <p>Blockquoute</p>
-            <div class="blockquote-footer">Someone famous</div>
-          </div>
+          <p>Viel Spaß beim Lesen, Planen und Träumen<br> und einen schönen stressfreien Hunde-Urlaub<br> wünschen Dir Gabriela &amp;&nbsp;<br> das hunde-urlaub.net-Team!</p>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-              <p class="card-text p-y-1">Some quick example text to build on the card title .</p> <a href="#" class="card-link">link</a> <a href="#" class="card-link">Second link</a> </div>
+            <div class="card-block"> [wpv-post-body view_template="ebook-7-checklisten"] </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+    <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
   </div>
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-  <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
 </body>
 
 </html>
